--- a/example-smart-app/launch-patient.html
+++ b/example-smart-app/launch-patient.html
@@ -27,7 +27,7 @@
     <script>
       FHIR.oauth2.authorize({
         'client_id': 'd7bfb31e-71bc-4e04-a5f6-21f7dd3abeb8',
-        'scope':  'patient/Patient.read patient/Observation.read user/* online_access openid profile'
+        'scope':  'patient/Patient.read patient/Observation.read launch/patient online_access openid profile'
       });
     </script>
     <div class="spinner">
